feat: allow apk upload to cdn
